[project]
name = "raiane-news"
version = "0.1.0"
description = ""
authors = [
    {name = "Raiane Cardoso",email = "166438302+raianecardoso@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
